--- a/GeneralAffairsManagementProject/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/GeneralAffairsManagementProject/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,10 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+﻿@using GeneralAffairsManagementProject
+@namespace GeneralAffairsManagementProject.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+<ItemGroup>
+  <None Include="Documents\**\*.*" />
+</ItemGroup>
