--- a/GeneralAffairsManagementProject/Pages/_ViewImports.cshtml
+++ b/GeneralAffairsManagementProject/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GeneralAffairsManagementProject
+@using Microsoft.AspNetCore.Mvc.RazorPages
 @namespace GeneralAffairsManagementProject.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
